--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
 - test_v1_test.yaml
+- test_v1_test2.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
